<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pedidos">

    <ListView
            android:layout_width="368dp"
            android:layout_height="315dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="188dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/Pedir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginEnd="14dp"
            android:layout_marginTop="74dp"
            android:layout_marginBottom="67dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/Limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@+id/button" app:layout_constraintEnd_toStartOf="@+id/button4"
            android:layout_marginEnd="14dp" android:layout_marginBottom="67dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="74dp"
            />
    <Button
            android:text="@string/Back"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/button4" android:layout_marginTop="74dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="67dp" app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="14dp"/>
</android.support.constraint.ConstraintLayout>