<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividad1">

    <ImageView
            android:layout_width="222dp"
            android:layout_height="184dp" app:srcCompat="@drawable/d7bb31732619107a77b161ca723787b2"
            android:id="@+id/imageView5" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="97dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="82dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="82dp"
            android:layout_marginBottom="55dp" app:layout_constraintBottom_toTopOf="@+id/button"/>
    <Button
            android:text="@string/Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginEnd="148dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
            android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@+id/button2"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/imageView5"/>
    <Button
            android:text="@string/Pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="39dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp"/>
    <TextView
            android:text="@string/Sorbetto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="164dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="164dp"/>
</android.support.constraint.ConstraintLayout>